<resources>
    <string name="app_name">Air Conditioning</string>
    <string name="launch_label">Heating</string>
    <string name="temperature">℃</string>
    <string name="action_settings">Settings</string>
    <string name="authorization_setting_title">Authorization</string>
    <string name="access_token_setting_title">Access Token</string>
    <string name="access_token_setting_summary">The access token for the Particle Cloud API</string>
    <string name="device_id_setting_title">Device Id</string>
    <string name="device_id_setting_summary">The device id of the Photon</string>
    <string name="network_setting_title">Network</string>
    <string name="check_interval_setting_summary">The number of seconds between network calls to update the displayed room temperature</string>
    <string name="check_interval_setting_title">Check Interval</string>
    <string name="check_interval_setting_msg">Seconds</string>
    <string name="check_interval_secs_default">30</string>
    <string name="off">Off</string>
    <string name="temp18">18</string>
    <string name="temp20">20</string>
    <string name="temp22">22</string>
    <string name="mode_heat">Heat</string>
    <string name="mode_cool">Cool</string>
</resources>
