<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/authorization_setting_title" >
        <EditTextPreference android:key="access_token"
            android:title="@string/access_token_setting_title"
            android:summary="@string/access_token_setting_summary"
            android:defaultValue="@string/default_access_token"/>
        <EditTextPreference android:key="device_id"
            android:title="@string/device_id_setting_title"
            android:summary="@string/device_id_setting_summary"
            android:defaultValue="@string/default_device"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/network_setting_title">
        <nz.gen.borrill.daikinac.NumberPickerPreference android:key="check_interval"
            android:dialogLayout="@layout/number_pref"
            android:dialogMessage="@string/check_interval_setting_msg"
            android:title="@string/check_interval_setting_title"
            android:summary="@string/check_interval_setting_summary"
            android:defaultValue="@string/check_interval_secs_default"/>
    </PreferenceCategory>
</PreferenceScreen>