<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:id="@+id/temperature"
        android:text="@string/temperature"
        style="@style/txtStyleSandrift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button18"
        android:text="@string/temp18"
        android:tag="temperature"
        style="@style/btnStyleSeagull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true" />

    <Button
        android:id="@+id/button20"
        android:text="@string/temp20"
        android:tag="temperature"
        style="@style/btnStyleSeagull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true" />

    <Button
        android:id="@+id/button22"
        android:text="@string/temp22"
        android:tag="temperature"
        style="@style/btnStyleSeagull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="@dimen/widget_width"
        android:clickable="true" />

    <Button
        android:id="@+id/buttonMode"
        android:text="@string/mode_heat"
        android:tag="mode"
        style="@style/btnStyleBlackpearl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:clickable="true" />

    <Button
        android:id="@+id/buttonOff"
        android:text="@string/off"
        android:tag="power"
        style="@style/btnStyleGenoa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:clickable="true" />

</LinearLayout>
